Fix date input colour in dark mode

--- a/sass/src/dark/index.scss
+++ b/sass/src/dark/index.scss
@@ -18,6 +18,7 @@ html {
 input[type=email],
 input[type=text],
 input[type=password],
+input[type=date],
 input[type=datetime-local],
 textarea {
 	color: $off-black;
